Fix our squished pancake logo

--- a/public/index.css
+++ b/public/index.css
@@ -32,8 +32,7 @@ body {
   background: url(assets/pancake-emoji.png) no-repeat top left;
   background-size: 90% 90%; /*contain;*/
   background-position: center center;
-  padding: 0px 10px;
-  margin-top: -20px;
+  margin: -20px 10px 0px 10px;
 }
 .section.hero h1 {
   color: #000000;
